# scalar-reward-collapse

./: LICENSE  README.md  pyproject.toml
scalar-reward-collapse/: .gitignore  CLAUDE.md
scalar-reward-collapse/scripts/: run_bandit_sweep.sh
scalar-reward-collapse/src/scalar_collapse/: cli.py
scalar-reward-collapse/src/scalar_collapse/core/: metrics.py  template.py
scalar-reward-collapse/src/scalar_collapse/experiments/: __init__.py
scalar-reward-collapse/src/scalar_collapse/experiments/bandit_ab/: __init__.py  plots.py  sweep.py
scalar-reward-collapse/src/scalar_collapse/runstore/: __init__.py  diff.py  manifest.py  trajectory.py  writer.py
scalar-reward-collapse/tests/: test_env.py
src/scalar_collapse/: __init__.py  __main__.py  cli.py
src/scalar_collapse/core/: __init__.py  boundary.py  config.py  rng.py  template.py
src/scalar_collapse/experiments/bandit_ab/: agents.py  env.py  kappa_plots.py  kappa_sweep.py  policies.py  simulate.py  sweep.py
tests/: test_env.py  test_kappa_sweep.py  test_metrics.py  test_runstore.py
